Avoid pushing botton navbar out of bounds when the header is opened and improve back arrow placement

--- a/src/app/search-guided/search-guided.component.css
+++ b/src/app/search-guided/search-guided.component.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding-bottom: 50px;
   color: white;
+  overflow-y: auto;
 }
 
 p {
